--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
@@ -2,6 +2,19 @@
   /* background-color: red; */
 }
 
+.eventSyncCard{
+  position: relative;
+  overflow: hidden;
+  width:50%;
+  top:25%;
+  background: white;
+  line-height: 150%;
+  border-radius: 15px;
+  padding:40px;
+  box-shadow:  0 10px 50px rgba(0, 0, 0, 0.08);
+  font-family: 'Segoe UI Regular';
+}
+
 
 .leftESync{
   width:100%;
@@ -170,17 +183,18 @@
   /* background-color: red; */
   display: flex;
   overflow: auto;
-  height: 780px;
+  position: relative;
+  height: 80%;
   border-top: 2px solid;
   border-color: darkgrey;
-  width: 900px;
+  width: 700px;
 }
 
 .eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body{
   /* background-color: red; */
   position: relative;
 
-  width: 800px;
+  width: 625px;
 }
 
 
