--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -243,7 +243,7 @@
   top: 50%;
   transform: translateY(-50%);
   z-index: 3;
-  left: 0%;
+  left: 1%;
   font-size: 45px;
   color: white;
 }
@@ -255,6 +255,7 @@
   right: 0%;
   /* right: 100%; */
   z-index: 3;
+  right: 1%;
   font-size: 45px;
   color: white;
 }
