--- a/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSync.css
+++ b/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSync.css
@@ -20,10 +20,14 @@
 }
 
 .rightTopEventSync{
+  left:50%;
+  top:25%;
   position: relative;
   height: 40%;
   vertical-align: middle;
-
+  transform: translateX(-50%) translateY(-50%);
+  font-weight: 400;
+  font-size: 14px;
   /* background: green; */
   /* background: green; */
 }
