--- a/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSync.css
+++ b/frontend/src/containers/PersonalCalendar/EventSyncForms/PickEventSync.css
@@ -11,7 +11,7 @@
 
 .rightEventSyncContainer{
   height: 100%;
-  width: 100%;
+  width: 70%;
   display: flex;
   flex-direction: column;
   position: relative;
@@ -26,8 +26,9 @@
   height: 40%;
   vertical-align: middle;
   transform: translateX(-50%) translateY(-50%);
-  font-weight: 400;
-  font-size: 14px;
+  font-weight: 600;
+  font-size: 16px;
+  color:grey;
   /* background: green; */
   /* background: green; */
 }
@@ -36,7 +37,7 @@
   position: relative;
   height:60%;
   /* background: red; */
-
+  width:100%;
   /* background: red; */
 }
 .EsyncProfileCard{
