--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -1,19 +1,23 @@
 /* CSS test for the post buttons */
 .newUpdateButtonContainer{
-  width: 100%;
-  height: 200px;
+  width: 45vw;
   display: flex;
   flex-direction: column;
+  box-shadow: 0 5px 30px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
+
 }
+
+
 
 .newUpdateDayContainer{
   height: 65%;
   width: 100%;
   display: flex;
   flex-direction: column;
+
 }
 .newBottomButtonHolder{
-  height: 35%;
+  height: 75px;
   width: 100%;
   display: flex;
   flex-direction: row;
@@ -23,12 +27,31 @@
   width: 50%;
   text-align: center;
   border-right: 1px solid lightgray;
+
 }
+
+.newButtonCard{
+  position: relative;
+  background-color: white;
+  height: 100%;
+  width: 100%;
+  left: 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  cursor: pointer;
+
+}
+
+.newButtonCard:hover{
+  background-color: whitesmoke;
+}
+
 .textCenter{
   position: relative;
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
+
 }
 .rightPart{
   width: 50%;
@@ -36,65 +59,90 @@
 }
 
 .upperTopContainer{
-  height: 50%;
+  height: 75px;
   display: flex;
   flex-direction: row;
   padding: 10px;
+  cursor: pointer;
 }
 
 .upperTopCard{
   background-color: white;
   width: 100%;
-  height: 95%;
+  height: 100%;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+
 }
 .upperTopLeftContainer{
   width: 10%;
 }
 .avatarHolder{
   position: relative;
-  left: 20%;
+  left: 50%;
   top: 50%;
-  transform: translateY(-50%);
+  transform: translateY(-50%) translateX(-50%);
 }
 .upperTopRightContainer{
-  width: 87%;
+  width: 90%;
   height: 95%;
   position: relative;
-  background-color: whitesmoke;
+  /* background-color: whitesmoke; */
   padding-left: 10px;
 }
+.upperTopRightContainer:hover{
+  background-color: whitesmoke;
+}
+
 .writeAPostText{
-  color: lightgray;
-  font-size: 25px;
-  top: 50%;
+  color: gray;
+  font-size: 20px;
+  top: 30%;
+  /* top: 50%; */
   position: relative;
-  transform:translateY(-50%);
+  /* transform:translateY(-50%); */
 }
 
 .upperBottomContainer{
-  height: 50%;
+  height: 75px;
+  cursor: pointer;
+
+  /* display: none; */
 }
+.upperBottomContainer.undisplayMid{
+  display: none;
+}
+
+
 .newPictureHolder{
-  height: 95%;
+  height: 100%;
   position: relative;
   top: 50%;
   transform: translateY(-50%);
   display: flex;
   flex-direction: row;
-  width: 50%;
+  width: 80%;
   /* background-color: red; */
   left: 11%;
 }
 .miniPics{
-  background-color: lightgray;
+  background-color: black;
   width: 60px;
+  height: 60px;
   margin-right: 20px;
   border-radius: 2px;
+  overflow: hidden;
+}
+.miniPics img{
+
+  height: 100%;
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%);
 }
 .circlePlus{
+  margin-left: 10px;
   font-size: 40px;
 }
 
@@ -122,7 +170,6 @@
 
 
 .newsfeedParent .newsfeedMidContainer{
-  /* background-color: blue; */
   padding-right: 100px;
   width: 52%;
   position: relative;
