start of invite followers to events

--- a/frontend/src/containers/Layouts/SuggestedFriends.css
+++ b/frontend/src/containers/Layouts/SuggestedFriends.css
@@ -15,7 +15,8 @@
     border-radius: 4px;
     overflow: auto;
     padding: 8px 24px;
-    max-height: 300px;
+    height: 300px;
+
 }
 
 .followerFollowingStat{
