--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -303,10 +303,13 @@
   width: 20%;
   text-align: center;
   font-size: 15px;
+  height: 50%;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .goingHolder .goingTitle{
-  /* background-color: red; */
+
   font-size: 16px;
   color:black;
 }
@@ -324,6 +327,9 @@
   text-align: center;
   font-size: 15px;
   width: 10%;
+  height: 50%;
+  top: 50%;
+  transform: translateY(-50%);
 
 }
 
