--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -5,13 +5,13 @@
 }
 
 .loginTitle{
-  color:#68BFFD;
+  color:#1890ff;
 
   font-size: 3vw;
-  margin-top: 10%;
+  margin-top: 17.5%;
   margin-left: 20%;
   position:'absolute';
-  font-weight: 500;
+  font-weight: 550;
   margin-bottom: 5%;
   /* background-color: red; */
   max-width:700px;
