--- a/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
+++ b/frontend/src/containers/PersonalCalendar/EventPage/EventPage.css
@@ -358,6 +358,8 @@
   position: relative;
 
   /* background-color: red; */
+  /* display: flex; */
+  /* flex-direction: row; */
   left: 50%;
   text-align: right;
   top:50%;
