--- a/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedPost.css
@@ -405,8 +405,8 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 .box-buttons > .row {
 
   margin-top: 10px;
-  border-bottom: 1px solid #F4F4F4;
-  border-top: 1px solid #F4F4F4;
+  border-bottom: 1px solid #d9d9d9;
+  border-top: 1px solid #d9d9d9;
 
   overflow: hidden;
   position: relative;
@@ -423,7 +423,7 @@ box-shadow: 0 2px 6px rgba(0, 0, 0, 0.06);
 .box-buttons > .row > button {
   background: #FFF;
   border: 0;
-  border-right: 1px solid #F4F4F4;
+  border-right: 1px solid #d9d9d9;
   color: #9197A3;
   font-size: 15px;
 
