--- a/frontend/src/containers/comments/PreviewComments.css
+++ b/frontend/src/containers/comments/PreviewComments.css
@@ -6,10 +6,17 @@
 /* tile uploaded pictures */
 .comment-action {
   padding-left: 8px;
+  padding-top: -5px;
   cursor: 'auto';
 }
 
 [class*='-col-rtl'] .comment-action {
   padding-right: 8px;
   padding-left: 0;
+}
+
+
+.previewCommentListLook{
+  font-weight: 400;
+  color:black;
 }
