--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1137,6 +1137,21 @@ controls all colors and font weight */
   font-size: 14px;
   margin-left: 5px;
   white-space:nowrap;
+
+}
+
+.socialTag{
+  background-color: white;
+  color: red;
+  margin-left: 5px;
+  margin-top: 2px;
+  text-align: center;
+  border-radius: 5px;
+  border: 1px solid red;
+}
+.socialTextTag{
+  position: relative;
+  right: 2px;
 }
 
 .eventTimeInfo{
