--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -71,7 +71,7 @@
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
   cursor: pointer;
-
+  font-weight: 400;
 }
 
 .newButtonCard:hover{
