--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -86,18 +86,6 @@
 
 }
 
-.leftPart{
-  width: 50%;
-  text-align: center;
-  border-right: 1px solid lightgray;
-
-}
-
-
-.rightPart{
-  width: 50%;
-  text-align: center;
-}
 
 
 .upperTopCard{
@@ -142,12 +130,12 @@
   flex-direction: row;
   width: 80%;
   /* background-color: red; */
-  left: 11%;
+  left: 3%;
 }
 .miniPics{
   background-color: black;
-  width: 60px;
-  height: 60px;
+  width: 50px;
+  height: 50px;
   margin-right: 20px;
   border-radius: 5px;
   overflow: hidden;
@@ -161,7 +149,8 @@
 }
 .circlePlus{
   margin-left: 10px;
-  font-size: 40px;
+  font-size: 35px;
+  margin-right: 10px;
 }
 
 
