--- a/frontend/src/containers/NewsFeedView.css
+++ b/frontend/src/containers/NewsFeedView.css
@@ -35,8 +35,9 @@
   border-radius: 20px;
   font-size: 16px;
   font-weight: 400;
-  padding:7.5px;
-
+  padding:7px;
+  margin-left: 10px;
+  width:95%;
   /* top: 50%; */
   position: relative;
   /* transform:translateY(-50%); */
