--- a/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialEventPage/SocialEventPage.css
@@ -451,7 +451,7 @@
   background-color: white;
   /* width: calc(100%/3); */
   flex-basis: calc(100%/3);
-
+  cursor: pointer;
 }
 .miniHolderHolder{
   position: relative;
