profile onclicks add

--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -413,6 +413,7 @@
   /* background-color: green; */
   position: relative;
   /* top: 25px; */
+  cursor: pointer;
 }
 
 .chatContainer .chatFarRightSide .chatManagerContainer .chatMemberList{
