--- a/frontend/src/containers/Container_CSS/Notifications.css
+++ b/frontend/src/containers/Container_CSS/Notifications.css
@@ -238,6 +238,14 @@
 
 }
 
+.notificationClearHolder{
+  text-align: center;
+  cursor: pointer;
+  background-color:white;
+}
+.notificationClearHolder:hover{
+  background-color: gainsboro;
+}
 
 .notificationScroll {
   overflow: auto;
