--- a/frontend/src/components/UserProfiles/ProfilePage.css
+++ b/frontend/src/components/UserProfiles/ProfilePage.css
@@ -4,7 +4,7 @@
 .profilePage{
   background-color: #f5f5f5;
   position: relative;
-  width: 96vw;
+  width: 100%;
   height: 93vh;
   top: 7%;
   display: flex;
