--- a/frontend/src/containers/comments/PreviewComments.css
+++ b/frontend/src/containers/comments/PreviewComments.css
@@ -22,27 +22,55 @@
 }
 
 
+.previewCommentMain{
+  display: flex;
+  flex-direction: row;
+  position: relative;
+
+}
+
+
+.previewCommentLeft{
+  position: relative;
+  width:5%;
+  margin-right: 10px;
+  /* background: blue; */
+}
+
+.previewCommentRight{
+  width:90%;
+  position: relative;
+  /* background: red; */
+}
 .newsFeedCommentItem {
   margin-top: 5px;
-  padding: 2px;
+  padding: 10px;
   display: flex;
   flex-direction: row;
   font-size: 14px;
   font-family: "Segoe UI Regular";
+  white-space: pre-line;
+  /* background: red; */
+  border-radius: 10px;
+  background: #f0f0f0;
+  margin-bottom: 5px;
 }
-.newsFeedCommentItem .newsFeedCommentAvatarSect{
-
+ .newsFeedCommentAvatarSect{
+  position: absolute;
+  left:50%;
+  top:30%;
+  transform: translate(-50%,-50%)
 }
 .newsFeedCommentItem .newsFeedCommentTextSect{
-  width: 90%;
-  margin-left: 10px;
+  width: 99%;
+
   line-height: 150%;
 }
 .newsFeedCommentItem .newsFeedCommentTextSect .newsFeedCommentNameTime{
   display: flex;
   flex-direction: row;
   width: 100%;
-  line-height: 125%;
+  line-height: 75%;
 }
 
 .newsFeedCommentName{
@@ -52,7 +80,7 @@
 }
 
 .newsfeedCommentUserName{
-  font-size: 13px;
+  font-size: 12px;
   color:grey;
 }
 .newsFeedCommentItem .newsFeedCommentDate{
