--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -95,26 +95,21 @@
   height: 100%;
   position: relative;
 }
-.singlePicHolder .singlePic{
+.singlePicHolder .singlePic img{
 
   width:100%;
   height:100%;
   overflow: hidden;
+  object-fit: cover;
   position: relative;
 }
 
-.singlePicHolder .singlePic .picture{
-  /* width: 100%; */
-  position: relative;
-  height: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-}
 
 .singlePicHolder .singlePic .backgroundPic {
     /* object-fit: cover; */
     width: 100%;
     height: 100%;
+    object-fit: cover;
     position: absolute;
     left: 50%;
     top: 50%;
@@ -326,13 +321,6 @@
   height: 100%;
 }
 
-.singlePic{
-  object-fit: contain;
-  width: 100%;
-  height: 100%;
-}
-
-
 
 
 
@@ -355,6 +343,8 @@
 
 .picturesRoll .socialImages{
   position: relative;
+  object-fit: cover;
+  width:100%;
   height: 100%;
   left: 50%;
   transform: translateX(-50%);
@@ -1059,24 +1049,6 @@
   padding-left: 10px;
   padding-bottom: 5px;
 }
-
-.socialHolder .socialCarouselSingle{
-  width: 70%;
-  height: 920px;
-  /* background-color: red; */
-  text-align: center;
-  overflow: hidden;
-}
-
-.socialHolder .socialCarouselSingle .singlePic{
-  /* position: relative; */
-  position: relative;
-  /* left: 50%; */
-  /* transform: translateX(-50%); */
-  height: 920px;
-  /* width: 1100px; */
-}
-
 
 
 
