new dob for sign up works

--- a/frontend/src/containers/Home.css
+++ b/frontend/src/containers/Home.css
@@ -146,3 +146,17 @@
   position:relative;
   /* background: orange; */
 }
+
+.middleSignUpHolder{
+  display: flex;
+}
+
+.inputSignupFlex{
+  display: flex;
+}
+
+.signUpIcon{
+  background-color: red;
+  color: rgba(0,0,0,.25);
+  font-size: 15px;
+}
