--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -88,8 +88,11 @@
 }
 
 .chatContainer .chatRightSide .addNewChatContainer .searchFormBox .searchForm .toText{
-  font-size: 22px;
+  font-size: 18px;
   margin-right: 10px;
+  font-family: Segoe UI Regular;
+  font-weight: 400;
+  margin-left: 10px;
 
 }
 .chatContainer .chatRightSide .addNewChatContainer .searchFormBox .searchForm .searchBox{
@@ -344,9 +347,10 @@
 }
 
 .newUserSearchChat{
-
+  margin-left: 10px;
   font-family: 'Segoe UI Regular';
-  font-size: 14px;
+  font-size: 16px;
+  font-weight: 400;
 
 }
 
