--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -101,7 +101,11 @@
   height:100%;
   overflow: hidden;
   object-fit: cover;
-  position: relative;
+  position: absolute;
+  object-position: 50% 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  left: 50%;
 }
 
 
@@ -262,6 +266,9 @@
   width: 100%;
 }
 
+
+
+
 .clipPicBackground .threeDot{
   position: absolute;
   right: 0%;
@@ -280,6 +287,7 @@
   transform: translateX(-50%) translateY(-50%);
   filter: blur(20px);
   overflow: hidden;
+  padding-bottom: 56.25%;
   z-index: 0;
 
 }
@@ -316,7 +324,7 @@
 }
 
 .singlePic{
-  object-fit: contain;
+  object-fit: cover;
   width: 100%;
   height: 100%;
 }
@@ -554,8 +562,15 @@
   height:80%;
   left:50%;
   top: 50%;
+  /* background: red; */
   transform: translateX(-50%) translateY(-50%);
   /* padding-right: -10px; */
+}
+
+.likingSocialAva{
+  float:right;
+  position: relative;
+
 }
 
 
