--- a/frontend/src/containers/comments/PreviewComments.css
+++ b/frontend/src/containers/comments/PreviewComments.css
@@ -32,8 +32,8 @@
 
 .previewCommentLeft{
   position: relative;
-  width:5%;
-  margin-right: 10px;
+  width:2.25%;
+  margin-right: 5px;
   /* background: blue; */
 }
 
@@ -57,13 +57,15 @@
   margin-bottom: 5px;
 }
 
-.
+
 
  .newsFeedCommentAvatarSect{
   position: absolute;
   left:50%;
   top:30%;
-  transform: translate(-50%,-50%)
+  transform: translate(-50%,-50%);
+  z-index:20;
+
 }
 
 .testCommentNewLook{
