--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -30,9 +30,10 @@
   position: fixed;
   background: white;
   /* height: 100; */
+
   top: 50%;
-  width: 90%;
-  height: 95%;
+  width: 91%;
+  height: 97.5%;
   left: 50%;
   transform: translateX(-50%) translateY(-50%);
   z-index: 100;
@@ -369,6 +370,8 @@
 /* CSS FOR THE TEXT AND COMMENT SIDE OF THE SOCIAL CAL CELL MODAL */
 .socialModalRight {
   position: relative;
+
+  /* height of comemnt lsit */
   height: 100%;
   width: 30%;
   flex-direction: column;
@@ -388,7 +391,7 @@
 .socialModalRight .topSection{
   position: relative;
   display: flex;
-  overflow: auto;
+
   flex-direction: column;
   height: 75%;
 }
@@ -403,7 +406,7 @@
 
 .socialNameSect{
   padding-top: 10px;
-  padding-bottom: 5px;
+
   display: flex;
   flex-direction: row;
 }
@@ -439,7 +442,7 @@
 }
 .socialNameTag .socialNameHolder .socialNameName{
   height: 50%;
-  font-size: 15px;
+  font-size: 14px;
   color: black;
   cursor: pointer;
 }
@@ -455,10 +458,12 @@
   width: 50%;
   text-align: center;
   color: black;
+
 }
 .socialNameSect .socialDate .socialDateDate{
   position: relative;
-  top: 32%;
+  top: 20%;
+  font-size: 14px;
   transform: translateY(-50%);
 }
 
@@ -466,6 +471,7 @@
 /* CSS for the caption and adding the caption */
 /* XXX come back for this */
 .socialCaptionSect{
+
 }
 
 .dayCaptionC{
@@ -473,6 +479,7 @@
 }
 
 .socialCaptionSect .dayCaption{
+  font-size: 13px;
   position: relative;
   width: 90%;
   left: 50%;
@@ -517,6 +524,7 @@
 /* XXX come back to this */
 .socialLikingSect{
   display: flex;
+  margin-bottom: 5px;
 }
 .socialLikingSect .socialLikeCommentNum{
     display: flex;
@@ -551,6 +559,7 @@
   height: 20px;
   font-weight: 400;
   color:black;
+  font-size: 12px;
 }
 
 
@@ -585,6 +594,7 @@
   position: relative;
   height: 30%;
 
+
   /* height: 84%; */
   /* height: 74%; */
 }
@@ -595,8 +605,8 @@
 }
 
 .socialLikeCommentSect{
-  font-size: 13px;
-  height: 40px;
+  font-size: 12px;
+  height: 30px;
   /* background: red; */
 }
 
@@ -609,6 +619,7 @@
   display: flex;
   flex-direction: row;
   width: 100%;
+  font-size: 12px;
 }
 .socialLikeComment .socialLike{
   /* background-color: blue; */
@@ -653,11 +664,11 @@
   width: 100%;
   /* overflow:hidden; */
   /* display: flex; */
-  /* background-color: blue; */
+
 }
 .socialCommentListSect .socialCommentBoxBox .socialCommentBox {
-  /* background-color: blue  ; */
   /* height: 100%; */
+
   width: 100%;
   padding-left: 10px;
   /* overflow:auto; */
@@ -707,10 +718,12 @@
 }
 
 .socialModalRight .bottomSection .socialCommentInputSect{
+  margin-top: 20px;
   height: 20%;
 }
 
 .socialModalRight .postBottomSection .socialCommentInputSect{
+
   height: 100%;
 }
 
@@ -727,6 +740,7 @@
 .socialCommentInputSect .socialCommentInput .socialInputFormHolder{
   position: relative;
   width: 82.5%;
+
 }
 .socialCommentInputSect .socialCommentInput .socialInputFormHolder .socialInputForm{
   width: 100%;
