--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -324,12 +324,6 @@
   color:white;
 }
 
-.singlePic{
-  object-fit: cover;
-  width: 100%;
-  height: 100%;
-}
-
 
 
 
@@ -340,8 +334,22 @@
   overflow: hidden;
   width: 100%;
   position: relative;
-  height: 95vh;
+  height: 97vh;
 }
+
+.picturesRoll .singlePic img{
+
+  width:100%;
+  height:100%;
+  overflow: hidden;
+  object-fit: cover;
+  position: absolute;
+  object-position: 50% 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  left: 50%;
+}
+
 
 .innerPic{
   width: 100%;
