--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -96,12 +96,17 @@
   height: 100%;
   position: relative;
 }
-.singlePicHolder .singlePic {
+.singlePicHolder .singlePic img{
 
   width:100%;
   height:100%;
   overflow: hidden;
-  position: relative;
+  object-fit: cover;
+  position: absolute;
+  object-position: 50% 50%;
+  top: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  left: 50%;
 }
 
 
@@ -319,6 +324,12 @@
   color:white;
 }
 
+.singlePic{
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+}
+
 
 
 
@@ -328,23 +339,10 @@
   /* background-color: #1f1f1f; */
   overflow: hidden;
   width: 100%;
-  position: relative;
-  height: 97vh;
-}
-
-.picturesRoll .singlePic img{
-
-  width:100%;
   height:100%;
-  overflow: hidden;
-  object-fit: cover;
-  position: absolute;
-  object-position: 50% 50%;
-  top: 50%;
-  transform: translateX(-50%) translateY(-50%);
-  left: 50%;
+  position: relative;
+  height: 95vh;
 }
-
 
 .innerPic{
   width: 100%;
