--- a/frontend/src/containers/NewChatFolder/NewChat.css
+++ b/frontend/src/containers/NewChatFolder/NewChat.css
@@ -368,6 +368,8 @@
   color: gray;
   font-size: 2vw;
   text-align: center;
+  font-weight: 400;
+  font-family: "Segoe UI Regular";
 }
 
 .chatContainer .chatLeftSide .newSidePanel{
