--- a/frontend/src/containers/UserEventTabFolder/UserEventList.css
+++ b/frontend/src/containers/UserEventTabFolder/UserEventList.css
@@ -1,3 +1,17 @@
+
+.noSocialEvent{
+  font-family: "Segoe UI Regular";
+  font-size: 30px;
+  position: relative;
+  left:45%;
+  top:50%;
+  width: 100%;
+  height: 100%;
+  /* background: red; */
+}
+
+
+
 .eventListTabContainer{
   position: relative;
   background-color: white;
