--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/NewCalendar.css
@@ -1121,7 +1121,7 @@ controls all colors and font weight */
 
 /* cell of the week */
 .weekEvent{
-  position: relative;
+  position: absolute;
   color: white;
   /* padding-top: 2px; */
   /* margin-bottom: 100px; */
