--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -490,9 +490,10 @@ aside {
 
 
 .searchBarContainer .autoCompleteHeader{
-  /* background:blue; */
+  background:blue;
   position:relative;
   left: 23.4%;
+  width: 60%;
   /* transform: translateX(-50%); */
   top:2.5px;
   color: black;
@@ -541,4 +542,34 @@ aside {
 
 .showBell{
   color:#1890ff;
+}
+
+
+.searchDropDown{
+  display: none;
+  position: absolute;
+  background-color: #f9f9f9;
+  /* min-width: 160px; */
+  width: 100%;
+  box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+  /* padding: 12px 16px; */
+  z-index: 1;
+}
+.searchDropDown.showSearch{
+  display: block;
+}
+
+.searchListObj{
+  background-color: white;
+  height: 150px;
+  width: 100%;
+  cursor: pointer;
+  text-align: center;
+}
+.noResultText{
+  position: relative;
+  font-size: 25px;
+  color: gray;
+  top: 30%;
+  /* transform: translateY(-50%); */
 }
