new search done

--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -573,3 +573,10 @@ aside {
   top: 30%;
   /* transform: translateY(-50%); */
 }
+
+.searchObj{
+  cursor: pointer;
+}
+.searchObj:hover{
+  background-color: whitesmoke;
+}
