--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -340,7 +340,7 @@
   overflow: hidden;
   width: 100%;
   position: relative;
-  height: 95vh;
+
 }
 
 .innerPic{
@@ -361,6 +361,28 @@
   /* top: 50%; */
 }
 
+.testSocialImageContainer{
+  position: relative;
+  left: 50%;
+  transform: translateX(-50%) ;
+
+  width:100%;
+  /* max-height: 90vh; */
+  height: 97.5vh;
+  overflow: hidden;
+  background-size: cover;
+
+}
+
+.testMiddleSocialCellCarousel{
+  position: relative;
+  width: 100%;
+  height: 100%;
+  left: 50%;
+  transform:translateX(-50%);
+  object-fit: cover;
+
+}
 
 
 
