--- a/frontend/src/components/SideMenu/SideMenu.css
+++ b/frontend/src/components/SideMenu/SideMenu.css
@@ -548,7 +548,7 @@ aside {
 .searchDropDown{
   display: none;
   position: absolute;
-  background-color: #f9f9f9;
+  background-color: white;
   /* min-width: 160px; */
   width: 100%;
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
@@ -573,11 +573,35 @@ aside {
   font-size: 25px;
   color: gray;
   top: 30%;
+  font-weight: 400;
+  font-family: "Segoe UI Regular";
   /* transform: translateY(-50%); */
 }
 
 .searchObj{
+  line-height: 100%;
   cursor: pointer;
+  font-weight: 400;
+  font-family: "Segoe UI Regular";
+  flex-direction: row;
+  display:flex;
+  position: relative;
+  color:black;
+
+}
+.searchObjLeft{
+  position: relative;
+  width:4%;
+  /* background: red; */
+
+}
+
+.searchObjRight{
+  position: relative;
+  width:96%;
+  /* background: blue; */
+  hegiht:50px;
+
 }
 .searchObj:hover{
   background-color: whitesmoke;
