--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCellPage.css
@@ -363,14 +363,10 @@
 
 .testSocialImageContainer{
   position: relative;
-  left: 50%;
-  transform: translateX(-50%) ;
+
 
   width:100%;
-  /* max-height: 90vh; */
-  height: 97.5vh;
-  overflow: hidden;
-  background-size: cover;
+height:100%;
 
 }
 
@@ -378,9 +374,10 @@
   position: relative;
   width: 100%;
   height: 100%;
-  left: 50%;
-  transform:translateX(-50%);
   object-fit: cover;
+  left: 50%;
+  transform: translateX(-50%) ;
+  overflow: hidden;
 
 }
 
