--- a/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
+++ b/frontend/src/containers/SocialCalendarFolder/SocialCalCSS/SocialCal.css
@@ -293,11 +293,13 @@
   margin: 2px;
   width: 99%;
   height: 70px;
-  padding-left: 3px;
+  padding-left: 5px;
   border-radius: 5px;
   border: 1px solid gainsboro;
   box-shadow: 0 0px 0px rgba(0, 0, 0, 0.12), 0 1px 4px rgba(0, 0, 0, 0.24);
   transition: 0.2s;
+  font-weight: 400;
+  font-family: "Segoe UI Regular";
 }
 .coverCellBoxList .coverCellBoxItem:hover {
 }
@@ -548,7 +550,7 @@
   transform: translateY(-50%);
 }
 .viewEventButtonCover{
-  background-color: gainsboro;
+  background-color: #1890ff;
   border: 1px solid gainsboro;
   border-radius: 5px;
   cursor: pointer;
@@ -587,11 +589,11 @@
 }
 
 .coverCellTextSide .coverCellEventTitle{
-  font-size: 110%;
+  font-size: 18px;
 }
 .coverCellTextSide .coverCellEventTime{
   display: flex;
-  font-size: 10px;
+  font-size: 12px;
 }
 .coverCellTextSide .coverCellEventTime .timeNum{
   margin-left: 2px;
@@ -608,6 +610,7 @@
   position: relative;
   top: 50%;
   transform: translateY(-50%);
+  font-size: 12px;
 }
 .coverCellTextSide .coverCellEventNum .likingCon{
   margin-left: 3px;
