--- a/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
+++ b/frontend/src/containers/NewsfeedItems/NewsfeedSpecCarousel.css
@@ -26,7 +26,7 @@
   /* display: flex; */
   position: relative;
   width:100%;
-  height: 90vh;
+  height: 600px;
 }
 
 .postPicCarouselNews .specLeftRight .newsFeedArrowLeft {
@@ -57,7 +57,7 @@
 
   width:100%;
   /* max-height: 90vh; */
-  height: 90vh;
+  /* height: 90vh; */
   overflow: hidden;
   background-size: cover;
   font-size: 30px;
@@ -97,9 +97,9 @@
 }
 
 .testMiddle{
-  position: absolute;
+  position: relative;
   width: 100%;
-  height:90vh;
+  height:600px;
   left: 50%;
   transform:translateX(-50%);
   object-fit: cover;
