--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
@@ -173,12 +173,16 @@
 }
 
 
-.eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .disabled{
+/* .eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .disabled{
   color: var(--text-color-light);
   color: black;
-  cursor: not-allowed;
+  cursor: not-allowed; */
   /* background-color: blue; */
-}
+/* } */
+
+/* .disabled{
+  background-color: red;
+} */
 
 .syncCol {
   flex-grow: 1;
@@ -259,9 +263,19 @@
 
   /* border-bottom: 1px solid var(--border-color); */
   /* overflow: hidden; */
-  cursor: pointer;
-  background: var(--neutral-color);
-  background-color: lightskyblue;
+  cursor:not-allowed;
+  /* background: var(--neutral-color); */
+  background: repeating-linear-gradient(
+    -45deg,
+    transparent,
+    transparent 10px,
+    #ccc 10px,
+    #ccc 20px
+  );
+  background-color: lightgray;
+  opacity: 0.5;
+
+
 }
 
 .eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .nonhourcellB{
@@ -271,9 +285,16 @@
   border-bottom: 1px solid var(--border-color);
   /* border-bottom: 1px solid var(--border-color); */
   /* overflow: hidden; */
-  cursor: pointer;
-  background: var(--neutral-color);
-  background-color: lightskyblue;
+  cursor:not-allowed;
+  background: repeating-linear-gradient(
+    -45deg,
+    transparent,
+    transparent 10px,
+    #ccc 10px,
+    #ccc 20px
+  );
+  background-color: lightgray;
+  opacity: 0.5;
 }
 
 
