extra code deleted

--- a/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
+++ b/frontend/src/containers/PersonalCalendar/PersonalCalCSS/EventSync.css
@@ -211,6 +211,12 @@
   width: 625px;
 }
 
+.eventSyncDayGrid{
+  width: 100%;
+  background-color: red;
+  position: relative;
+}
+
 
 .eventSyncCalendarContainer .syncCalendar .syncBody .syncGrid .body .hourcell{
   position: relative;
